GitHub logo added for header's quicklinks

--- a/PortFolio/PortFolio/settings.py.sample
+++ b/PortFolio/PortFolio/settings.py.sample
@@ -9,6 +9,7 @@ BASE_PATH = ''
 
 HEADER_ADMIN = ('Your Name', 'http://mysite.com')
 HEADER_QUICKLINKS = (
+#    ('github', 'https://github.com/*****'),
 #    ('linkedin', 'http://www.linkedin.com/pub/*****'),
 #    ('viadeo', 'http://fr.viadeo.com/fr/profile/*****'),
 )
