--- a/PortFolio/PortFolio/settings.py.sample
+++ b/PortFolio/PortFolio/settings.py.sample
@@ -19,6 +19,8 @@ FOOTER_QUICKLINKS = (
 #     ('alt text', 'url', 'mouseover image', 'mouseout image'),
 )
 
+THEME = 'school' # also: 'leather'
+
 # DEFAULT SETTINGS
 
 DEBUG = True
