--- a/PortFolio/PortFolio/settings.py.sample
+++ b/PortFolio/PortFolio/settings.py.sample
@@ -67,7 +67,7 @@ TIME_ZONE = 'Europe/Paris'
 
 # Language code for this installation. All choices can be found here:
 # http://www.i18nguy.com/unicode/language-identifiers.html
-LANGUAGE_CODE = 'fr-fr'
+LANGUAGE_CODE = 'en-UK'
 
 SITE_ID = 1
 
